JG-2007-11-09-0: Bugfix:    drmaa-j test lookup for java was incorrect.
                 Review:    MD

JG-2007-11-08-0: Bugfix:    Fixed set_config_and_propagate for SGE <= 6.1.
                 Review:    EB

JG-2007-11-07-0: Enhancem.: Enhanced system_tests/qmaster/reporting to test
                            writing of consumable records.
                            Some cleanup and minor fixes.
                 Review:    EB

AP-2007-11-05-0: Enhancem.: o checktree_arco: added tablespaces to the ARCo 
                              configuration
                            o using java15 instead of java14
                            o root access for getting SWC status/version
                 Review:    JG

AH-2007-11-05-1: Enhancem.: Added test for IZ 2339
                 Review:    EB

AH-2007-11-05-0: Enhancem.: Added test for IZ 2378
                 Review:    EB

EB-2007-11-02-0: Enhancem.: Added support for "scheduler as a thread"
                 Review:    JG

EB-2007-11-02-0: CVS        Created EB_PRE_SAAT_TAG
---------------------------------------------------

RH-2007-10-31-0: Enhance:   Hedeby show_status test adjusted to new output
                            of sdmadm show_status
                 Review:    RM

OJ-2007-10-30-0: Enhance:   Added testcase for IZ 2383
                 Review:    JG 

JG-2007-10-30-0: Bugfix:    fixed qmaster installation without jmx enabled
                 Review:    RH

RD-2007-10-29-0: Bugfix:    fixed interactive installation on darwin-x86
                 Review:    JG

OJ-2007-10-26-0: Enhance:   Modified checktree/bugs/issuezilla/1780/check.60.exp
                            to verify that IZ 1780 is gone
                 Review:    JG 

MD-2007-10-26-0: Enhance:   o added Issue test for IZ 2406
                            o enhanced backup_restore test
                 Review:    HP

RH-2007-10-26-1: Bugfix:    o configuration upgrade from 1.12 to 1.13
                              was not possible